--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(to right, #89fffd, #ef32d9);
+    background: linear-gradient(to right, #0f2027, #203a43, #2c5364); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     font-family: 'Roboto', sans-serif;
 }
 
